--- a/src/app/components/product-item/product-item.component.html
+++ b/src/app/components/product-item/product-item.component.html
@@ -4,13 +4,14 @@
         <div class="panel-body">
             <div class="product-header">
                 <h3><a [routerLink]="['/product-detail',product.id]">  {{product.name}} </a></h3>
-                <h3>{{product.price}}</h3>
-                </div>
-                <div class="product-description">
-                    <p>{{product.description}}</p>
-                </div>
-        </div>
-      
+                <span><img [src]="imagePath"/></span>
+                <p> Price Revised on:{{product.dateAdded | date:"MM/yy"}}</p> 
+                <h3>{{product.price}}</h3>                
+            </div>
+            <div class="product-description">
+                 <p>{{product.description}}</p>
+            </div>
+        </div>      
 </div>
 
 
